<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single" android:id="@+id/nav_group_1">
        <item
            android:id="@+id/nav_user"
            android:icon="@drawable/ic_action_user"
            android:title="@string/nav_user" />
        <item
            android:id="@+id/nav_album"
            android:icon="@android:drawable/ic_menu_gallery"
            android:title="@string/nav_gallery" />

        <item
            android:id="@+id/nav_post"
            android:icon="@drawable/ic_action_posts"
            android:title="@string/nav_posts" />
    </group>

    <group android:checkableBehavior="single" android:id="@+id/nav_group_2">

    <item
        android:id="@+id/nav_signout"
        android:icon="@android:drawable/ic_delete"
        android:title="@string/nav_sign_out" />
    </group>


</menu>