<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/color_primary_material_light"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    >


    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_label"
        android:gravity="center_horizontal"
        android:layout_alignParentTop="true"
        android:layout_marginTop="40dp"
        android:textSize="40sp"
        android:textColor="@android:color/white"
        />

    <EditText
        android:layout_centerInParent="true"
        android:hint="@string/username"
        android:singleLine="true"
        android:id="@+id/txt_username"
        android:text="usuario"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@android:color/darker_gray"
        android:background="@drawable/custom_edit_text"
        />
    <EditText
        android:singleLine="true"
        android:layout_marginTop="10dp"
        android:hint="@string/password"
        android:layout_below="@+id/txt_username"
        android:id="@+id/txt_password"
        android:inputType="textPassword"
        android:text="usuario"
        android:layout_width="fill_parent"
        android:textColorHint="@android:color/darker_gray"
        android:background="@drawable/custom_edit_text"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btn_login"
        android:layout_marginTop="10dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_password"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:background="@drawable/custom_buttom"
        android:text="@string/login"/>



</RelativeLayout>